fix navbar collapse icons

--- a/index.css
+++ b/index.css
@@ -26,10 +26,6 @@ body {
     font-family: Fredoka One;
 }
 
-a, a:hover, a:active {
-    color: #F8CF7F;
-}
-
 lottie-player {
     margin: 0 auto;
 }
@@ -46,4 +42,8 @@ iframe, .gif {
     padding-top: 33.75%;
     left: 50%;
     transform: translateX(-50%)
+}
+
+a, a:hover, a:active {
+    color: white;
 }
